<resources>
    <string name="app_name">Pilnuj Grosza</string>
    <string name="menu_budget">Budżet</string>
    <string name="menu_shopping">Zakupy</string>
    <string name="menu_calendar">Kalendarz</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="shopping_text_addShopping">Dodaj zakupy</string>
    <string name="shopping_btn_shoppingLists">Listy zakupów</string>
    <string name="shopping_btn_receipts">Paragony</string>
    <string name="shopping_text_test">Tu w przyszłości będzie lista zakupów.</string>
    <string name="calendar_text_test">Tu w przyszłości będzie kalendarz.</string>
    <string name="profile_text_addProfile">Dodaj profil</string>
    <string name="profile_text_test">Tu w przyszłości będzie lista profili.</string>
    <string name="settings_text_test">Tu w przyszłości będą ustawienia.</string>
    <string name="expensesList_text_test">Tu w przyszłości będzie lista wydatków.</string>
    <string name="incomeList_text_test">Tu w przyszłości będzie lista przychodów.</string>
    <string name="shoppingList_text_addShoppingList">Dodaj listę zakupów</string>
    <string name="shoppingList_text_test">Tu w przyszłości będzie lista list zakupów.</string>
    <string name="receipt_text_addReceipt">Dodaj paragon</string>
    <string name="receipt_text_test">Tu w przyszłości będzie lista paragonów.</string>
    <string name="summary_text_test">Tu w przyszłości będzie ekran podsumowujący.</string>
    <string name="title_activity_settings">Ustawienia</string>
    <string name="title_activity_budget">Budżet</string>
    <string name="title_activity_shopping">Zakupy</string>
    <string name="title_activity_calendar">Kalendarz</string>
    <string name="title_activity_profile">Profil</string>
    <string name="title_activity_statistics">Statystyki</string>
    <string name="title_activity_expenses_list">Lista wydatków</string>
    <string name="title_activity_income_list">Lista przychodów</string>
    <string name="title_activity_receipt">Paragony</string>
    <string name="title_activity_shopping_list">Listy zakupów</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="prof_adapter_footer">Ostatnie logowanie:</string>
    <string name="profile_createform_name">Nazwa profilu</string>
    <string name="profile_createform_email">Adres e-mail</string>
    <string name="profile_createform_pin">Kod PIN</string>
    <string name="profile_createform_initialBalance">Saldo początkowe (domyślnie: 0)</string>
    <string name="prof_alertDialog_addProfile">Utwórz profil</string>
    <string name="prof_toast_createSuccessful_true">"Profil został utworzony."</string>
    <string name="prof_toast_createSuccessful_false">Nie udało się stworzyć profilu.</string>
    <string name="profile_editform_submit_name">Zmień nazwę profilu</string>
    <string name="profile_editform_submit_email">Zmień adres e-mail</string>
    <string name="profile_editform_text_oldPIN">Obecny kod PIN</string>
    <string name="profile_editform_text_newPIN">Nowy kod PIN</string>
    <string name="profile_editform_text_newPIN_confirm">Potwiedź nowy kod PIN</string>
    <string name="profile_editform_submit_PIN">Zmień kod PIN</string>
    <string name="profile_createform_submitProfile">Utwórz profil</string>
    <string name="profile_editform_submit_deleteProfile">Usuń profil</string>
    <string name="profile_editform_email">Nowy adres e-mail</string>
    <string name="profile_editform_name">Nowa nazwa profilu</string>
    <string name="profile_loginform_info_login">Logowanie</string>
    <string name="profile_createform_text_pin_confirm">Powtórz kod PIN</string>
    <string name="profile_editform_info_login">Edycja profilu</string>
    <string name="profile_createform_info_login">Tworzenie profilu</string>
    <string name="title_activity_menu">Menu główne</string>
    <string name="profile_loginform_predelete_info">Wpisz kod PIN, aby potwierdzić operację usunięcia profilu</string>
    <string name="profile_loginform_predelete_button_login">Usuń profil</string>
    <string name="profile_createform_button_nextstage">Dalej</string>
    <string name="profile_createform_text_helperquestion_answer">Odpowiedź na pytanie pomocnicze</string>
    <string name="profile_createform_text_helperquestion_question">Pytanie pomocniczne</string>
    <string name="profile_createform_info_helperquestion">Ustawianie pytania pomocniczego</string>
    <string name="profile_remindPIN_submitRemind">Przypomnij kod PIN</string>
    <string name="profile_showPIN_info_helperquestion">Przypomnienie kodu PIN</string>
    <string name="profile_remindPIN_info_helperquestion">Przypomnienie kodu PIN</string>
    <string name="profile_showPIN_submitRemind">Zakończ</string>
    <string name="profile_empty_text">Jak widzisz, nie ma tutaj żadnego profilu, stwórz go!</string>
    <string name="profile_editform_text_newHelperQuestion">Nowe pytanie pomocnicze</string>
    <string name="profile_editform_text_newHelperAnswer">Odpowiedź na nowe pytanie pomocnicze</string>
    <string name="profile_editform_submit_QandA">Zmień pytanie i odpowiedź pomocniczą</string>
    <string name="profile_fab_tooltip_addProfile">Utwórz profil</string>
    <string name="mainmenu_addIncome_button">Dodaj przychód</string>
    <string name="mainmenu_addExpense_button">Dodaj wydatek</string>
    <string name="mainmenu_finMgmt_button">Zarządzanie finansami</string>
    <string name="mainmenu_addReceipt_button">Dodaj paragon</string>
    <string name="mainmenu_addShoppingList_button">Dodaj listę zakupów</string>
    <string name="mainmenu_shoppingLists_button">Listy zakupów</string>
    <string name="mainmenu_profiles_button">Wyloguj się</string>
    <string name="mainmenu_settings_button">Ustawienia</string>
    <string name="mainmenu_receiptsList_button">Paragony</string>
    <string name="prof_rc_secondLine">Description</string>
    <string name="prof_rc_firstLine">Example</string>
    <string name="expcat_rc_name">Example</string>
    <string name="expcat_empty_text">Jak widzisz, nie ma tutaj żadnej kategorii, stwórz ją!</string>
    <string name="expcat_editform_info_edit">Edycja<br /> kategorii wydatków</string>
    <string name="expcat_editform_text_name">Nowa nazwa kategorii wydatków</string>
    <string name="expcat_editform_submit">Zmień nazwę kategorii wydatków</string>
    <string name="expcat_create_info_login">Tworzenie<br /> kategorii wydatków</string>
    <string name="expcat_createform_text_name">Nazwa kategorii wydatków</string>
    <string name="expcat_createform_submit">Utwórz kategorię wydatków</string>
    <string name="expcat_deleteform_info_delete">Usuwanie<br /> kategorii wydatków</string>
    <string name="expcat_deleteform_delete">Czy chcesz usunąć tę kategorię wydatków?</string>
    <string name="expcat_deleteform_submit">Usuń kategorię wydatków</string>
    <string name="expcat_fab_addExpense">Utwórz wydatek</string>
    <string name="expense_expcatList_button">Lista kategorii wydatków</string>
    <string name="expense_fab_addExpense">Utwórz wydatkek</string>
    <string name="title_activity_expense_category">Kategorie wydatków</string>
    <string name="trans_empty_text">Jak widzisz, nie ma tutaj żadnej transakcji, dodaj ją!</string>
    <string name="exp_rc_firstLine">Example</string>
    <string name="exp_rc_secondLine">Description</string>
    <string name="inc_rc_secondLine">Description</string>
    <string name="inc_rc_firstLine">Example</string>
    <string name="budget_statistics_button">Statystyki</string>
    <string name="finmgmt_calendar_button">Kalendarz</string>
    <string name="finmgmt_actualBudget_info_text">Aktualny budżet:</string>
    <string name="finmgmt_budgetmenu_button">Menu budżetów</string>
    <string name="finmgmt_statistics_button">Statystyki</string>
    <string name="finmgmt_transactionsList_button">Transakcje</string>
    <string name="trans_fab_addIncome">Dodaj przychód</string>
    <string name="trans_fab_addExpense">Dodaj wydatek</string>
    <string name="finmgmt_inccat_button">Kategorie przychodów</string>
    <string name="finmgmt_expcat_button">Kategorie wydatków</string>
    <string name="inccat_fab_addIncCat">Utwórz kategorię przychodów</string>
    <string name="expcat_fab_addExpCat">Utwórz kategorię wydatków</string>
    <string name="inccat_empty_text">Jak widzisz, nie ma tutaj żadnej kategorii, stwórz ją!</string>
    <string name="inccat_rc_name">Example</string>
    <string name="inccat_create_info_login">Tworzenie<br /> kategorii przychodów</string>
    <string name="inccat_createform_text_name">Nazwa kategorii przychodów</string>
    <string name="inccat_createform_submit">Utwórz kategorię przychodów</string>
    <string name="inccat_deleteform_info_delete">Usuwanie<br /> kategorii przychodów</string>
    <string name="inccat_deleteform_delete">Czy chcesz usunąć tę kategorię przychodów?</string>
    <string name="inccat_deleteform_submit">Usuń kategorię przychodów</string>
    <string name="inccat_editform_info_edit">Edycja<br /> kategorii przychodów</string>
    <string name="inccat_editform_text_name">Nowa nazwa kategorii przychodów</string>
    <string name="inccat_editform_submit">Zmień nazwę kategorii przychodów</string>
    <string name="finmgmt_feeSchedule_button">Harmonogram opłat</string>
    <string name="income_create_info_login">Tworzenie przychodu</string>
    <string name="income_createform_text_value">Wartość przychodu</string>
    <string name="income_createform_submit">Utwórz przychód</string>
    <string name="income_createform_text_desc">Opis przychodu</string>
    <string name="expense_create_info_login">Tworzenie wydatku</string>
    <string name="expense_createform_text_value">Wartość wydatku</string>
    <string name="expense_createform_text_desc">Opis wydatku</string>
    <string name="expense_createform_submit">Utwórz wydatek</string>
    <string name="budget_rc_fromDate">od:</string>
    <string name="budget_rc_toDate">do:</string>
    <string name="budget_rc_startDate">1900-01-01</string>
    <string name="budget_rc_endDate">1900-12-31</string>
    <string name="budget_rc_amountSlider">/</string>
    <string name="budget_rc_amount_info">wydano:</string>
    <string name="menu_sort_action_sort_value_asc">Wartość rosnąco</string>
    <string name="menu_sort_action_sort_value_desc">Wartość malejąco</string>
    <string name="sholist_rc_name">Test name</string>
    <string name="sholist_rc_date">1900-01-01</string>
    <string name="sholist_rc_desc">description</string>
    <string name="sholist_rc_num_of_prod_and_value_info">produktów o wartości:</string>
    <string name="sholist_rc_value">123</string>
    <string name="sholist_rc_currency">zł</string>
    <string name="sholist_rc_num_of_prod">1</string>
    <string name="menu_sort_action_sort_name_asc">Nazwa alfabetycznie</string>
    <string name="menu_sort_action_sort_name_desc">Nazwa odwrotnie alfabetycznie</string>
    <string name="shocont_rc_name">Example</string>
    <string name="shocont_rc_value">1375.99</string>
    <string name="shocont_rc_currency">zł</string>
    <string name="shocont_rc_amount">3.75</string>
    <string name="shocont_rc_unit">kg</string>
    <string name="menu_sort_action_sort_unit_asc">Jednostka alfabetycznie</string>
    <string name="menu_sort_action_sort_unit_desc">Jednostka odwrotnie alfabetycznie</string>
</resources>