<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_sort_action_sort_name_asc"
        android:title="@string/menu_sort_action_sort_name_asc" />

    <item android:id="@+id/menu_sort_action_sort_name_desc"
        android:title="@string/menu_sort_action_sort_name_desc" />

    <item android:id="@+id/menu_sort_action_sort_value_asc"
        android:title="@string/menu_sort_action_sort_value_asc" />

    <item android:id="@+id/menu_sort_action_sort_value_desc"
        android:title="@string/menu_sort_action_sort_value_desc" />

    <item android:id="@+id/menu_sort_action_sort_unit_asc"
        android:title="@string/menu_sort_action_sort_unit_asc" />

    <item android:id="@+id/menu_sort_action_sort_unit_desc"
        android:title="@string/menu_sort_action_sort_unit_desc" />

</menu>