<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBackground" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true" >

        <ImageView
            android:id="@+id/profile_editform_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:src="@mipmap/pilnuj_grosza_logo_foreground"
            android:scaleType="center"
            android:scaleX="3"
            android:scaleY="3">
        </ImageView>

        <TextView
            android:id="@+id/profile_editform_info_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:layout_below="@+id/profile_editform_logo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/profile_editform_info_login"
            android:singleLine="true" >
        </TextView>

        <EditText
            android:id="@+id/profile_editform_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profile_editform_info_login"
            android:layout_marginHorizontal="20dp"
            android:drawableStart="@drawable/baseline_account_box_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/profile_editform_name"
            android:singleLine="true" >
        </EditText>

        <Button
            android:id="@+id/profile_editform_submit_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/profile_editform_text_name"
            android:text="@string/profile_editform_submit_name" />

        <EditText
            android:id="@+id/profile_editform_text_newPIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profile_editform_submit_name"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:inputType="numberPassword"
            android:drawableStart="@drawable/baseline_pin_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/profile_editform_text_newPIN"
            android:singleLine="true" />

        <EditText
            android:id="@+id/profile_editform_text_newPIN_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profile_editform_text_newPIN"
            android:layout_marginHorizontal="20dp"
            android:inputType="numberPassword"
            android:drawableStart="@drawable/baseline_pin_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/profile_editform_text_newPIN_confirm"
            android:singleLine="true" />

        <Button
            android:id="@+id/profile_editform_submit_PIN"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/profile_editform_text_newPIN_confirm"
            android:text="@string/profile_editform_submit_PIN" />

        <EditText
            android:id="@+id/profile_editform_text_newHelperQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profile_editform_submit_PIN"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:maxLength="128"
            android:drawableStart="@drawable/baseline_help_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/profile_editform_text_newHelperQuestion"
            android:singleLine="true" />

        <EditText
            android:id="@+id/profile_editform_text_newHelperAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/profile_editform_text_newHelperQuestion"
            android:layout_marginHorizontal="20dp"
            android:maxLength="128"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_qa_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/profile_editform_text_newHelperAnswer"
            android:singleLine="true" />

        <Button
            android:id="@+id/profile_editform_submit_QandA"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/profile_editform_text_newHelperAnswer"
            android:text="@string/profile_editform_submit_QandA" />

        <Button
            android:id="@+id/profile_editform_submit_deleteProfile"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/profile_editform_submit_QandA"
            android:layout_margin="20dp"
            android:text="@string/profile_editform_submit_deleteProfile" />

</RelativeLayout>
</ScrollView>