<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip"
    android:background="@color/whiteBackground" >

    <ImageView
        android:id="@+id/budget_rc_icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="12dip"
        android:src="@mipmap/pilnuj_grosza_logo_round" />

    <TextView
        android:id="@+id/budget_rc_fromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/budget_rc_amount"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/budget_rc_icon"
        android:gravity="center_vertical"
        android:text="@string/budget_rc_fromDate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/budget_rc_startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/budget_rc_amount"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/budget_rc_fromDate"
        android:layout_marginStart="12dip"
        android:gravity="center_vertical"
        android:text="@string/budget_rc_startDate"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/budget_rc_toDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/budget_rc_amount"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toStartOf="@id/budget_rc_endDate"
        android:layout_marginEnd="12dip"
        android:gravity="center_vertical"
        android:text="@string/budget_rc_toDate"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/budget_rc_endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/budget_rc_amount"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginEnd="24dip"
        android:gravity="center_vertical"
        android:text="@string/budget_rc_endDate"
        android:textStyle="bold"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/budget_rc_amount_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/budget_rc_icon"
        android:text="@string/budget_rc_amount_info"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/budget_rc_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/budget_rc_amount_info"
        android:gravity="center_vertical"
        android:layout_marginStart="24dip"
        android:text="@string/prof_rc_firstLine"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/budget_rc_amountSlider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/budget_rc_amount"
        android:layout_marginHorizontal="6dip"
        android:gravity="center_vertical"
        android:text="@string/budget_rc_amountSlider"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/budget_rc_initialAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toEndOf="@id/budget_rc_amountSlider"
        android:gravity="center_vertical"
        android:text="@string/prof_rc_firstLine"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>