<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:padding="6dp" >

    <CheckBox
        android:id="@+id/shocont_rc_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp" />

    <TextView
        android:id="@+id/shocont_rc_name"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toStartOf="@id/shocont_rc_amount"
        android:layout_toEndOf="@id/shocont_rc_checkbox"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:text="@string/shocont_rc_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/shocont_rc_amount"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toStartOf="@+id/shocont_rc_unit"
        android:layout_marginEnd="5dp"
        android:gravity="center_vertical"
        android:text="@string/shocont_rc_amount"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/shocont_rc_unit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toStartOf="@+id/shocont_rc_value"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:text="@string/shocont_rc_unit"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/shocont_rc_value"
        android:layout_width="42dp"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/shocont_rc_currency"
        android:layout_marginEnd="3dp"
        android:gravity="center_vertical"
        android:text="@string/shocont_rc_value"
        android:textSize="12sp"
        android:textStyle="italic"
        android:textAlignment="textEnd"/>

    <TextView
        android:id="@+id/shocont_rc_currency"
        android:layout_width="10dp"
        android:layout_height="match_parent"
        android:layout_toStartOf="@+id/shocont_rc_deleteicon"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/shocont_rc_currency"
        android:textSize="12sp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/shocont_rc_deleteicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/baseline_delete_24"/>

</RelativeLayout>