<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:scrollbars="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true" >

    <ImageView
        android:id="@+id/profile_createform_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:src="@mipmap/pilnuj_grosza_logo_foreground"
        android:scaleType="center"
        android:scaleX="3"
        android:scaleY="3">
    </ImageView>

    <TextView
        android:id="@+id/profile_createform_info_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:layout_below="@+id/profile_createform_logo"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/profile_createform_info_login"
        android:singleLine="true" >
    </TextView>

    <EditText
        android:id="@+id/profile_createform_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:maxLength="20"
        android:layout_below="@+id/profile_createform_info_login"
        android:drawableStart="@drawable/baseline_account_box_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/profile_createform_name"
        android:singleLine="true" >
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/profile_createform_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_createform_text_name"
        android:layout_marginHorizontal="20dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/baseline_email_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/profile_createform_email"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_createform_text_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_createform_text_email"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:drawableStart="@drawable/baseline_pin_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/profile_createform_pin"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_createform_text_pin_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_createform_text_pin"
        android:layout_marginHorizontal="20dp"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:drawableStart="@drawable/baseline_pin_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/profile_createform_text_pin_confirm"
        android:singleLine="true" />

    <EditText
        android:id="@+id/profile_createform_text_initialBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/profile_createform_text_pin_confirm"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:inputType="numberDecimal"
        android:drawableStart="@drawable/baseline_account_balance_black_24dp"
        android:drawablePadding="10dp"
        android:hint="@string/profile_createform_initialBalance"
        android:singleLine="true" />

    <Button
        android:id="@+id/profile_createform_submitProfile"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/profile_createform_text_initialBalance"
        android:layout_margin="10dp"
        android:text="@string/profile_createform_submitProfile" />

</RelativeLayout>
</ScrollView>
